modo-db-macros/tests/ui/missing_table_attr.stderr
error: unexpected end of input, missing `table` argument
 --> tests/ui/missing_table_attr.rs:3:1
  |
3 | #[entity]
  | ^^^^^^^^^
  |
  = note: this error originates in the attribute macro `entity` (in Nightly builds, run with -Z macro-backtrace for more info)
