modo-db-macros/tests/ui/missing_table_attr.rs
use modo_db::entity;

#[entity]
pub struct BadEntity {
    pub id: String,
    pub name: String,
}

fn main() {}
